# Game

./: .gitignore  CMakeLists.txt
docs/: CodingGuidelines.md
src/: game.cpp  game_api.h  game_math.h  main.cpp  main.h
src/engine/: Game.cpp  Game.h
src/engine/gameObject/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
src/engine/gameObject/components/: RenderableComponent.cpp  RenderableComponent.h  Transform.cpp  Transform.h  TransformComponent.h
src/engine/main/: Game.cpp
src/engine/main/renderer/: Renderer.cpp  Renderer.h
src/engine/main/scene/: AssetManager.cpp  AssetManager.h  Scene.cpp  Scene.h
src/engine/renderer/: Renderer.cpp  Renderer.h
src/engine/scene/: AssetManager.cpp  AssetManager.h  Scene.cpp  Scene.h
src/engine/scene/scenes/: Scenes.h  TestScene.cpp
